--- a/ng/src/app/detalle/detalle-edit.component.html
+++ b/ng/src/app/detalle/detalle-edit.component.html
@@ -20,6 +20,14 @@
             <textarea class="form-control" name="larga" [(ngModel)]="model.larga"></textarea>
         </div>
         <div class="form-group">
+            <label>Mts. Largo : </label>
+            <input type="number" class="form-control" name="largo" [(ngModel)]="model.largo" />
+        </div>
+        <div class="form-group">
+            <label>Mts. Ancho: </label>
+            <input type="number" class="form-control" name="ancho" [(ngModel)]="model.ancho" />
+        </div>
+        <div class="form-group">
             <label># de Ventanas: </label>
             <input type="number" class="form-control" name="ventanas" [(ngModel)]="model.ventanas" />
         </div>
