--- a/ng/src/app/fotolista/fotolista-component.css
+++ b/ng/src/app/fotolista/fotolista-component.css
@@ -1,12 +1,23 @@
+.drop-container {
+  display: flex;
+}
+.example-container {
+  width: 400px;
+  max-width: 100%;
+  margin: 0 25px 25px 0;
+  display: inline-block;
+  vertical-align: top;
+}
 .example-list {
-    width: 250px;
-    max-width: 100%;
+    min-width: 250px;
+    max-width: 250px;
     border: solid 1px #ccc;
     min-height: 60px;
-    display: block;
+    display: inline;
     background: white;
     border-radius: 4px;
     overflow: hidden;
+    margin: 20px;
   }
   
   .example-box {
@@ -19,10 +30,24 @@
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    background:white;
     font-size: 14px;
   }
-  
+  .example-box-delete{
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    background: rgba(216, 28, 28, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    color: white;
+    font-size: 14px;
+    min-width: 250px;
+    min-height: 250px;
+  }
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
